--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,4 @@
-RESEND_API_KEY=
-CONTACT_FROM_EMAIL=contact@noveradrone.fr
-CONTACT_TO_EMAIL=contact@noveradrone.fr
-
-SMTP_HOST=
-SMTP_PORT=587
-SMTP_SECURE=false
-SMTP_USER=
-SMTP_PASS=
+RESEND_API_KEY=re_xxxxxxxxxxxxxxxxx
+CONTACT_FROM_EMAIL=Novera Drone <onboarding@resend.dev>
+CONTACT_TO_EMAIL=noveradrone@gmail.com
+CONTACT_STRICT_EMAIL_PROVIDER=true
